# linkerd2-proxy

./: Cargo.toml  README.md  controller.md  justfile
.devcontainer/: devcontainer.json
.github/workflows/: beta.yml  check-all.yml  check-each.yml  coverage.yml  deps.yml  fuzzers.yml  lint.yml  markdown.yml  nightly.yml
linkerd/app/admin/src/: stack.rs
linkerd/app/core/src/: metrics.rs
linkerd/app/inbound/fuzz/: Cargo.toml
linkerd/app/inbound/src/: accept.rs  detect.rs  http.rs  policy.rs  test_util.rs
linkerd/app/outbound/src/: http.rs
linkerd/authz/: Cargo.toml
linkerd/authz/src/: lib.rs
linkerd/grpc-route/src/: filter.rs  lib.rs  match.rs  proto.rs
linkerd/http-route/: Cargo.toml
linkerd/http-route/src/: filter.rs  grpc.rs  http.rs  lib.rs  proto.rs  service.rs
linkerd/http-route/src/filter/: error_respond.rs  redirect.rs
linkerd/http-route/src/grpc/: match.rs
linkerd/http-route/src/grpc/filter/: error_respond.rs
linkerd/http-route/src/http/: filter.rs  match.rs
linkerd/http-route/src/http/filter/: error_respond.rs  modify_request_header.rs  redirect.rs
linkerd/http-route/src/http/match/: header.rs  host.rs  path.rs  query_param.rs
linkerd/http-route/src/match/: header.rs
linkerd/http-routes/: Cargo.toml
linkerd/http-routes/src/: filter.rs  lib.rs  match.rs  service.rs
linkerd/http-routes/src/match/: host.rs  path.rs  query_param.rs
linkerd/proxy/tap/: Cargo.toml
linkerd/server-policy/: Cargo.toml
linkerd/server-policy/src/: authz.rs  grpc.rs  http.rs  lib.rs  proto.rs
linkerd/service-profiles/: Cargo.toml
(+15 files in other folders)
