[package]
name = "linkerd-http-route"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
publish = false

[features]
proto = ["linkerd2-proxy-api"]

[dependencies]
bytes = "1"
futures = { version = "0.3", default-features = false }
http = "0.2"
linkerd2-proxy-api = { version = "0.5", features = ["http-route"], optional = true }
linkerd-stack = { path = "../stack" }
regex = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
url = "2"

[dev-dependencies]
maplit = "1"
