[package]
name = "linkerd-http-routes"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
publish = false

[features]
default = ["inbound"]
inbound = []
outbound = []

[dependencies]
futures = { version = "0.3", default-features = false }
http = "0.2"
linkerd-stack = { path = "../stack" }
regex = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
url = "2"

[dev-dependencies]
maplit = "1"
